--- a/styles/mixin.scss
+++ b/styles/mixin.scss
@@ -16,13 +16,26 @@
   }
 }
 
-@mixin enlace-a($color, $family, $size, $weight, $background-after) {
+@mixin enlace-a(
+  $color,
+  $family,
+  $size,
+  $weight,
+  $background-after,
+  $color-border,
+  $color-border-hover
+) {
   color: $color;
   font-family: $family;
   font-size: $size;
   font-weight: $weight;
   position: relative;
   z-index: 1;
+  transition: all 0.5s ease;
+  border: 1px solid $color-border;
+  svg {
+    transition: all 0.5s ease;
+  }
   &::after {
     content: "";
     position: absolute;
@@ -35,6 +48,11 @@
     z-index: -1;
   }
   &:hover {
+    border: 1px solid $color-border-hover;
+    font-weight: 700;
+    svg {
+      transform: translateX(2.5rem);
+    }
     &::after {
       width: 20%;
     }
